include/StTrgApi.h

BOOL WINAPI StTrg_TakeRawSnapShot(HANDLE hCamera, PBYTE pbyteRaw, DWORD dwBufferSize, PDWORD pdwNumberOfByteTrans, PDWORD pdwFrameNo, DWORD dwMilliseconds);
BOOL WINAPI StTrg_SaveImageA(DWORD dwWidth, DWORD dwHeight, DWORD dwPixelFormat, PBYTE pbyteGrayOrBGR, PCSTR pszFileName, DWORD dwParam);
//-----------------------------------------------------------------------------
//Other
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_ResetRootHub();
BOOL WINAPI StTrg_SetProcessorIdleState(DWORD dwAC, DWORD dwDC);
BOOL WINAPI StTrg_GetProcessorIdleState(PDWORD pdwAC, PDWORD pdwDC);
BOOL WINAPI StTrg_SetDigitalClamp(HANDLE hCamera, WORD wValue);
BOOL WINAPI StTrg_GetDigitalClamp(HANDLE hCamera, PWORD pwValue);
BOOL WINAPI StTrg_ClearBuffer(HANDLE hCamera);
//-----------------------------------------------------------------------------
//BINNING_SUM_MODE
//-----------------------------------------------------------------------------
#define STCAM_BINNING_SUM_MODE_OFF	0x0000
//-----------------------------------------------------------------------------
//DEFECT_PIXEL_CORRECTION_MODE
//-----------------------------------------------------------------------------
#define STCAM_DEFECT_PIXEL_CORRECTION_OFF	0x0000
//-----------------------------------------------------------------------------
//ALC_MODE
//-----------------------------------------------------------------------------
#define STCAM_ALCMODE_OFF	0
#define STCAM_ALCMODE_CAMERA_AE_ON	0x10
#define STCAM_ALCMODE_CAMERA_AGC_ON	0x20
#define STCAM_ALCMODE_CAMERA_AE_AGC_ON	0x30
#define STCAM_ALCMODE_PC_AE_AGC_ON	0x01
//-----------------------------------------------------------------------------
//BINNING_SUM_MODE
//-----------------------------------------------------------------------------
#define STCAM_BINNING_SUM_MODE_H	0x0001
//-----------------------------------------------------------------------------
//DEFECT_PIXEL_CORRECTION_MODE
//-----------------------------------------------------------------------------
#define STCAM_DEFECT_PIXEL_CORRECTION_ON	0x0001
//-----------------------------------------------------------------------------
//BINNING_SUM_MODE
//-----------------------------------------------------------------------------
#define STCAM_BINNING_SUM_MODE_V	0x0100
//-----------------------------------------------------------------------------
//ALC_MODE
//-----------------------------------------------------------------------------
#define STCAM_ALCMODE_PC_AE_ON	0x02
#define STCAM_ALCMODE_PC_AGC_ON	0x03
#define STCAM_ALCMODE_PC_AE_AGC_ONESHOT	0x04
#define STCAM_ALCMODE_PC_AE_ONESHOT	0x05
#define STCAM_ALCMODE_PC_AGC_ONESHOT	0x06
//-----------------------------------------------------------------------------
//ERROR_STCAM
//-----------------------------------------------------------------------------
#define ERR_EXPOSURE_END_DROPPED	0xE0000001
#define ERR_IMAGE_DATA_DROPPED	0xE0000002
#define ERR_TIMEOUT_ST2EE	0xE0000003
#define ERR_TIMEOUT_TE2EE	0xE0000004
#define ERR_TIMEOUT_EE2TE	0xE0000005
#define ERR_TIMEOUT_RO2TE	0xE0000006
#define ERR_INVALID_FUNCTION_WHILE_TRANSFERRING	0xE0000100
//-----------------------------------------------------------------------------
//WM_STCAM
//-----------------------------------------------------------------------------
#define WM_STCAM_TRANSFER_END	0xB101
#define WM_STCAM_EXPOSURE_END	0xB102
#define WM_STCAM_RCV_ERROR	0xB103
//-----------------------------------------------------------------------------
//COLOR_ARRAY
//-----------------------------------------------------------------------------
#define STCAM_COLOR_ARRAY_MONO	0x0001
#define STCAM_COLOR_ARRAY_RGGB	0x0002
#define STCAM_COLOR_ARRAY_GRBG	0x0003
#define STCAM_COLOR_ARRAY_GBRG	0x0004
#define STCAM_COLOR_ARRAY_BGGR	0x0005
//-----------------------------------------------------------------------------
//SCAN_MODE
//-----------------------------------------------------------------------------
#define STCAM_SCAN_MODE_NORMAL	0x0000
#define STCAM_SCAN_MODE_PARTIAL_2	0x0001
#define STCAM_SCAN_MODE_PARTIAL_4	0x0002
#define STCAM_SCAN_MODE_PARTIAL_1	0x0004
#define STCAM_SCAN_MODE_VARIABLE_PARTIAL	0x0008
#define STCAM_SCAN_MODE_BINNING	0x0010
#define STCAM_SCAN_MODE_BINNING_PARTIAL_1	0x0020
#define STCAM_SCAN_MODE_BINNING_PARTIAL_2	0x0040
#define STCAM_SCAN_MODE_BINNING_PARTIAL_4	0x0080
#define STCAM_SCAN_MODE_BINNING_VARIABLE_PARTIAL	0x0100
#define STCAM_SCAN_MODE_AOI	0x8000
//-----------------------------------------------------------------------------
//PIXEL_FORMAT
//-----------------------------------------------------------------------------
#define STCAM_PIXEL_FORMAT_08_MONO_OR_RAW	0x00000001
#define STCAM_PIXEL_FORMAT_24_BGR	0x00000004
#define STCAM_PIXEL_FORMAT_32_BGR	0x00000008
//-----------------------------------------------------------------------------
//PIXEL_FORMAT_FOR_SAVE
//-----------------------------------------------------------------------------
#define STCAM_PIXEL_FORMAT_10_MONO_OR_RAW	0x00000010
//-----------------------------------------------------------------------------
//PIXEL_FORMAT
//-----------------------------------------------------------------------------
#define STCAM_PIXEL_FORMAT_48_BGR	0x00000100
//-----------------------------------------------------------------------------
//PIXEL_FORMAT_FOR_SAVE
//-----------------------------------------------------------------------------
#define STCAM_PIXEL_FORMAT_12_MONO_OR_RAW	0x00000020
//-----------------------------------------------------------------------------
//PIXEL_FORMAT
//-----------------------------------------------------------------------------
#define STCAM_PIXEL_FORMAT_64_BGR	0x00000200
//-----------------------------------------------------------------------------
//PIXEL_FORMAT_FOR_SAVE
//-----------------------------------------------------------------------------
#define STCAM_PIXEL_FORMAT_16_MONO_OR_RAW	0x00000002
//-----------------------------------------------------------------------------
//COLOR_INTERPOLATION
//-----------------------------------------------------------------------------
#define STCAM_COLOR_INTERPOLATION_NONE_MONO	0
#define STCAM_COLOR_INTERPOLATION_NONE_COLOR	1
#define STCAM_COLOR_INTERPOLATION_NEAREST_NEIGHBOR	2
#define STCAM_COLOR_INTERPOLATION_BILINEAR	3
#define STCAM_COLOR_INTERPOLATION_BILINEAR_FALSE_COLOR_REDUCTION	5
#define STCAM_COLOR_INTERPOLATION_BICUBIC	4
//-----------------------------------------------------------------------------
//WB
//-----------------------------------------------------------------------------
#define STCAM_WB_OFF	0
#define STCAM_WB_MANUAL	1
#define STCAM_WB_FULLAUTO	2
#define STCAM_WB_ONESHOT	3
//-----------------------------------------------------------------------------
//GAMMA_MODE
//-----------------------------------------------------------------------------
#define STCAM_GAMMA_OFF	0
#define STCAM_GAMMA_ON	1
#define STCAM_GAMMA_REVERSE	2
#define STCAM_GAMMA_TABLE	255
//-----------------------------------------------------------------------------
//GAMMA_TARGET
//-----------------------------------------------------------------------------
#define STCAM_GAMMA_TARGET_Y	0
#define STCAM_GAMMA_TARGET_R	1
#define STCAM_GAMMA_TARGET_GR	2
#define STCAM_GAMMA_TARGET_GB	3
#define STCAM_GAMMA_TARGET_B	4
//-----------------------------------------------------------------------------
//SHARPNESS
//-----------------------------------------------------------------------------
#define STCAM_SHARPNESS_OFF	0
#define STCAM_SHARPNESS_ON	1
//-----------------------------------------------------------------------------
//HUE_SATURATION
//-----------------------------------------------------------------------------
#define STCAM_HUE_SATURATION_OFF	0
#define STCAM_HUE_SATURATION_ON	1
//-----------------------------------------------------------------------------
//COLOR_MATRIX
//-----------------------------------------------------------------------------
#define STCAM_COLOR_MATRIX_OFF	0x00
#define STCAM_COLOR_MATRIX_CUSTOM	0xFF
//-----------------------------------------------------------------------------
//MIRROR
//-----------------------------------------------------------------------------
#define STCAM_MIRROR_OFF	0
#define STCAM_MIRROR_HORIZONTAL	1
#define STCAM_MIRROR_VERTICAL	2
#define STCAM_MIRROR_HORIZONTAL_VERTICAL	3
//-----------------------------------------------------------------------------
//MIRROR_CAMERA
//-----------------------------------------------------------------------------
#define STCAM_MIRROR_HORIZONTAL_CAMERA	16
#define STCAM_MIRROR_VERTICAL_CAMERA	32
//-----------------------------------------------------------------------------
//ROTATION
//-----------------------------------------------------------------------------
#define STCAM_ROTATION_OFF	0
#define STCAM_ROTATION_CLOCKWISE_90	1
#define STCAM_ROTATION_COUNTERCLOCKWISE_90	2
//-----------------------------------------------------------------------------
//CLOCK_MODE
//-----------------------------------------------------------------------------
#define STCAM_CLOCK_MODE_NORMAL	0x00000000
#define STCAM_CLOCK_MODE_DIV_2	0x00000001
#define STCAM_CLOCK_MODE_DIV_4	0x00000002
#define STCAM_CLOCK_MODE_VGA_90FPS	0x00000100
//-----------------------------------------------------------------------------
//USBPID
//-----------------------------------------------------------------------------
#define STCAM_USBPID_STC_B33USB	0x0705
#define STCAM_USBPID_STC_C33USB	0x0305
#define STCAM_USBPID_STC_B83USB	0x0805
#define STCAM_USBPID_STC_C83USB	0x0605
#define STCAM_USBPID_STC_TB33USB	0x0906
#define STCAM_USBPID_STC_TC33USB	0x1006
#define STCAM_USBPID_STC_TB83USB	0x1106
#define STCAM_USBPID_STC_TC83USB	0x1206
#define STCAM_USBPID_STC_TB133USB	0x0109