include/StTrgAPI.Bas


'------------------------------------------------------------------------------
'Other
'------------------------------------------------------------------------------
Public Declare Function StTrg_ResetRootHub Lib "StTrgAPI.dll" () As Long
Public Declare Function StTrg_SetProcessorIdleState Lib "StTrgAPI.dll" (ByVal dwAC As Long, ByVal dwDC As Long) As Long
Public Declare Function StTrg_GetProcessorIdleState Lib "StTrgAPI.dll" (ByRef pdwAC As Long, ByRef pdwDC As Long) As Long
Public Declare Function StTrg_SetDigitalClamp Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wValue As Integer) As Long
Public Declare Function StTrg_GetDigitalClamp Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwValue As Integer) As Long
Public Declare Function StTrg_ClearBuffer Lib "StTrgAPI.dll" (ByVal hCamera As Long) As Long
'------------------------------------------------------------------------------
'For 16bits raw image
'------------------------------------------------------------------------------
Public Declare Function StTrg_TakeRawSnapShot_W Lib "StTrgAPI.dll" Alias "StTrg_TakeRawSnapShot" (ByVal hCamera As Long, ByRef pbyteRaw As Integer, ByVal dwBufferSize As Long, ByRef pdwNumberOfByteTrans As Long, ByRef pdwFrameNo As Long, ByVal dwMilliseconds As Long) As Long
Public Declare Function StTrg_SaveImageA_W Lib "StTrgAPI.dll" Alias "StTrg_SaveImageA" (ByVal dwWidth As Long, ByVal dwHeight As Long, ByVal dwPixelFormat As Long, ByRef pbyteGrayOrBGR As Integer, ByVal pszFileName As String, ByVal dwParam As Long) As Long
'------------------------------------------------------------------------------
'BINNING_SUM_MODE
'------------------------------------------------------------------------------
Public Const STCAM_BINNING_SUM_MODE_OFF As Integer = &H0000
'------------------------------------------------------------------------------
'DEFECT_PIXEL_CORRECTION_MODE
'------------------------------------------------------------------------------
Public Const STCAM_DEFECT_PIXEL_CORRECTION_OFF As Integer = &H0000
'------------------------------------------------------------------------------
'ALC_MODE
'------------------------------------------------------------------------------
Public Const STCAM_ALCMODE_OFF As Byte = 0
Public Const STCAM_ALCMODE_CAMERA_AE_ON As Byte = &H10
Public Const STCAM_ALCMODE_CAMERA_AGC_ON As Byte = &H20
Public Const STCAM_ALCMODE_CAMERA_AE_AGC_ON As Byte = &H30
Public Const STCAM_ALCMODE_PC_AE_AGC_ON As Byte = &H01
'------------------------------------------------------------------------------
'BINNING_SUM_MODE
'------------------------------------------------------------------------------
Public Const STCAM_BINNING_SUM_MODE_H As Integer = &H0001
'------------------------------------------------------------------------------
'DEFECT_PIXEL_CORRECTION_MODE
'------------------------------------------------------------------------------
Public Const STCAM_DEFECT_PIXEL_CORRECTION_ON As Integer = &H0001
'------------------------------------------------------------------------------
'BINNING_SUM_MODE
'------------------------------------------------------------------------------
Public Const STCAM_BINNING_SUM_MODE_V As Integer = &H0100
'------------------------------------------------------------------------------
'ALC_MODE
'------------------------------------------------------------------------------
Public Const STCAM_ALCMODE_PC_AE_ON As Byte = &H02
Public Const STCAM_ALCMODE_PC_AGC_ON As Byte = &H03
Public Const STCAM_ALCMODE_PC_AE_AGC_ONESHOT As Byte = &H04
Public Const STCAM_ALCMODE_PC_AE_ONESHOT As Byte = &H05
Public Const STCAM_ALCMODE_PC_AGC_ONESHOT As Byte = &H06
'------------------------------------------------------------------------------
'ERROR_STCAM
'------------------------------------------------------------------------------
Public Const ERR_EXPOSURE_END_DROPPED As Long = &HE0000001&
Public Const ERR_IMAGE_DATA_DROPPED As Long = &HE0000002&
Public Const ERR_TIMEOUT_ST2EE As Long = &HE0000003&
Public Const ERR_TIMEOUT_TE2EE As Long = &HE0000004&
Public Const ERR_TIMEOUT_EE2TE As Long = &HE0000005&
Public Const ERR_TIMEOUT_RO2TE As Long = &HE0000006&
Public Const ERR_INVALID_FUNCTION_WHILE_TRANSFERRING As Long = &HE0000100&
'------------------------------------------------------------------------------
'WM_STCAM
'------------------------------------------------------------------------------
Public Const WM_STCAM_TRANSFER_END As Long = &HB101&
Public Const WM_STCAM_EXPOSURE_END As Long = &HB102&
Public Const WM_STCAM_RCV_ERROR As Long = &HB103&
'------------------------------------------------------------------------------
'COLOR_ARRAY
'------------------------------------------------------------------------------
Public Const STCAM_COLOR_ARRAY_MONO As Integer = &H0001
Public Const STCAM_COLOR_ARRAY_RGGB As Integer = &H0002
Public Const STCAM_COLOR_ARRAY_GRBG As Integer = &H0003
Public Const STCAM_COLOR_ARRAY_GBRG As Integer = &H0004
Public Const STCAM_COLOR_ARRAY_BGGR As Integer = &H0005
'------------------------------------------------------------------------------
'SCAN_MODE
'------------------------------------------------------------------------------
Public Const STCAM_SCAN_MODE_NORMAL As Integer = &H0000
Public Const STCAM_SCAN_MODE_PARTIAL_2 As Integer = &H0001
Public Const STCAM_SCAN_MODE_PARTIAL_4 As Integer = &H0002
Public Const STCAM_SCAN_MODE_PARTIAL_1 As Integer = &H0004
Public Const STCAM_SCAN_MODE_VARIABLE_PARTIAL As Integer = &H0008
Public Const STCAM_SCAN_MODE_BINNING As Integer = &H0010
Public Const STCAM_SCAN_MODE_BINNING_PARTIAL_1 As Integer = &H0020
Public Const STCAM_SCAN_MODE_BINNING_PARTIAL_2 As Integer = &H0040
Public Const STCAM_SCAN_MODE_BINNING_PARTIAL_4 As Integer = &H0080
Public Const STCAM_SCAN_MODE_BINNING_VARIABLE_PARTIAL As Integer = &H0100
Public Const STCAM_SCAN_MODE_AOI As Integer = &H8000
'------------------------------------------------------------------------------
'PIXEL_FORMAT
'------------------------------------------------------------------------------
Public Const STCAM_PIXEL_FORMAT_08_MONO_OR_RAW As Long = &H00000001&
Public Const STCAM_PIXEL_FORMAT_24_BGR As Long = &H00000004&
Public Const STCAM_PIXEL_FORMAT_32_BGR As Long = &H00000008&
'------------------------------------------------------------------------------
'PIXEL_FORMAT_FOR_SAVE
'------------------------------------------------------------------------------
Public Const STCAM_PIXEL_FORMAT_10_MONO_OR_RAW As Long = &H00000010&
'------------------------------------------------------------------------------
'PIXEL_FORMAT
'------------------------------------------------------------------------------
Public Const STCAM_PIXEL_FORMAT_48_BGR As Long = &H00000100&
'------------------------------------------------------------------------------
'PIXEL_FORMAT_FOR_SAVE
'------------------------------------------------------------------------------
Public Const STCAM_PIXEL_FORMAT_12_MONO_OR_RAW As Long = &H00000020&
'------------------------------------------------------------------------------
'PIXEL_FORMAT
'------------------------------------------------------------------------------
Public Const STCAM_PIXEL_FORMAT_64_BGR As Long = &H00000200&
'------------------------------------------------------------------------------
'PIXEL_FORMAT_FOR_SAVE
'------------------------------------------------------------------------------
Public Const STCAM_PIXEL_FORMAT_16_MONO_OR_RAW As Long = &H00000002&
'------------------------------------------------------------------------------
'COLOR_INTERPOLATION
'------------------------------------------------------------------------------
Public Const STCAM_COLOR_INTERPOLATION_NONE_MONO As Byte = 0
Public Const STCAM_COLOR_INTERPOLATION_NONE_COLOR As Byte = 1
Public Const STCAM_COLOR_INTERPOLATION_NEAREST_NEIGHBOR As Byte = 2
Public Const STCAM_COLOR_INTERPOLATION_BILINEAR As Byte = 3
Public Const STCAM_COLOR_INTERPOLATION_BILINEAR_FALSE_COLOR_REDUCTION As Byte = 5
Public Const STCAM_COLOR_INTERPOLATION_BICUBIC As Byte = 4
'------------------------------------------------------------------------------
'WB
'------------------------------------------------------------------------------
Public Const STCAM_WB_OFF As Byte = 0
Public Const STCAM_WB_MANUAL As Byte = 1
Public Const STCAM_WB_FULLAUTO As Byte = 2
Public Const STCAM_WB_ONESHOT As Byte = 3
'------------------------------------------------------------------------------
'GAMMA_MODE
'------------------------------------------------------------------------------
Public Const STCAM_GAMMA_OFF As Byte = 0
Public Const STCAM_GAMMA_ON As Byte = 1
Public Const STCAM_GAMMA_REVERSE As Byte = 2
Public Const STCAM_GAMMA_TABLE As Byte = 255
'------------------------------------------------------------------------------
'GAMMA_TARGET
'------------------------------------------------------------------------------
Public Const STCAM_GAMMA_TARGET_Y As Byte = 0
Public Const STCAM_GAMMA_TARGET_R As Byte = 1
Public Const STCAM_GAMMA_TARGET_GR As Byte = 2
Public Const STCAM_GAMMA_TARGET_GB As Byte = 3
Public Const STCAM_GAMMA_TARGET_B As Byte = 4
'------------------------------------------------------------------------------
'SHARPNESS
'------------------------------------------------------------------------------
Public Const STCAM_SHARPNESS_OFF As Byte = 0
Public Const STCAM_SHARPNESS_ON As Byte = 1
'------------------------------------------------------------------------------
'HUE_SATURATION
'------------------------------------------------------------------------------
Public Const STCAM_HUE_SATURATION_OFF As Byte = 0
Public Const STCAM_HUE_SATURATION_ON As Byte = 1
'------------------------------------------------------------------------------
'COLOR_MATRIX
'------------------------------------------------------------------------------
Public Const STCAM_COLOR_MATRIX_OFF As Byte = &H00
Public Const STCAM_COLOR_MATRIX_CUSTOM As Byte = &HFF
'------------------------------------------------------------------------------
'MIRROR
'------------------------------------------------------------------------------
Public Const STCAM_MIRROR_OFF As Byte = 0
Public Const STCAM_MIRROR_HORIZONTAL As Byte = 1
Public Const STCAM_MIRROR_VERTICAL As Byte = 2
Public Const STCAM_MIRROR_HORIZONTAL_VERTICAL As Byte = 3
'------------------------------------------------------------------------------
'MIRROR_CAMERA
'------------------------------------------------------------------------------
Public Const STCAM_MIRROR_HORIZONTAL_CAMERA As Byte = 16
Public Const STCAM_MIRROR_VERTICAL_CAMERA As Byte = 32
'------------------------------------------------------------------------------
'ROTATION
'------------------------------------------------------------------------------
Public Const STCAM_ROTATION_OFF As Byte = 0
Public Const STCAM_ROTATION_CLOCKWISE_90 As Byte = 1
Public Const STCAM_ROTATION_COUNTERCLOCKWISE_90 As Byte = 2
'------------------------------------------------------------------------------
'CLOCK_MODE
'------------------------------------------------------------------------------
Public Const STCAM_CLOCK_MODE_NORMAL As Long = &H00000000&
Public Const STCAM_CLOCK_MODE_DIV_2 As Long = &H00000001&
Public Const STCAM_CLOCK_MODE_DIV_4 As Long = &H00000002&
Public Const STCAM_CLOCK_MODE_VGA_90FPS As Long = &H00000100&
'------------------------------------------------------------------------------
'USBPID
'------------------------------------------------------------------------------
Public Const STCAM_USBPID_STC_B33USB As Integer = &H0705
Public Const STCAM_USBPID_STC_C33USB As Integer = &H0305
Public Const STCAM_USBPID_STC_B83USB As Integer = &H0805
Public Const STCAM_USBPID_STC_C83USB As Integer = &H0605
Public Const STCAM_USBPID_STC_TB33USB As Integer = &H0906
Public Const STCAM_USBPID_STC_TC33USB As Integer = &H1006
Public Const STCAM_USBPID_STC_TB83USB As Integer = &H1106
Public Const STCAM_USBPID_STC_TC83USB As Integer = &H1206
Public Const STCAM_USBPID_STC_TB133USB As Integer = &H0109
